CR-946 changes for Spring Boot 2.3.0