@@ -1,5 +1,6 @@
 package uk.gov.ons.ctp.common.utility;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.http.converter.xml.Jaxb2RootElementHttpMessageConverter;
@@ -9,17 +10,17 @@ import org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExc
 import org.springframework.web.servlet.mvc.method.annotation.ServletInvocableHandlerMethod;
 
 /** Mock Mvc Controller Advice Helper */
-public class MockMvcControllerAdviceHelper extends ExceptionHandlerExceptionResolver {
+public class MockMvcControllerAdviceHelper<T> extends ExceptionHandlerExceptionResolver {
 
   private static final String ERROR_MSG = "Unable to instantiate exception handler %s";
-  private final Class exceptionHandlerClass;
+  private final Class<T> exceptionHandlerClass;
 
   /**
    * MockMvcControllerAdviceHelper constructor
    *
    * @param exceptionHandlerClass Exception Handler Class
    */
-  public MockMvcControllerAdviceHelper(Class exceptionHandlerClass) {
+  public MockMvcControllerAdviceHelper(Class<T> exceptionHandlerClass) {
     super();
     getMessageConverters().add(new MappingJackson2HttpMessageConverter());
     getMessageConverters().add(new Jaxb2RootElementHttpMessageConverter());
@@ -33,8 +34,8 @@ public class MockMvcControllerAdviceHelper extends ExceptionHandlerExceptionReso
    * @param exceptionHandlerClass Exception Handler Class
    * @return MockMvcControllerAdviceHelper object
    */
-  public static MockMvcControllerAdviceHelper mockAdviceFor(Class exceptionHandlerClass) {
-    return new MockMvcControllerAdviceHelper(exceptionHandlerClass);
+  public static <T> MockMvcControllerAdviceHelper<T> mockAdviceFor(Class<T> exceptionHandlerClass) {
+    return new MockMvcControllerAdviceHelper<T>(exceptionHandlerClass);
   }
 
   /**
@@ -49,8 +50,13 @@ public class MockMvcControllerAdviceHelper extends ExceptionHandlerExceptionReso
     Object exceptionHandler = null;
 
     try {
-      exceptionHandler = exceptionHandlerClass.newInstance();
-    } catch (IllegalAccessException | InstantiationException e) {
+      exceptionHandler = exceptionHandlerClass.getDeclaredConstructor().newInstance();
+    } catch (IllegalAccessException
+        | InstantiationException
+        | NoSuchMethodException
+        | IllegalArgumentException
+        | InvocationTargetException
+        | SecurityException e) {
       throw new RuntimeException(
           String.format(ERROR_MSG, exceptionHandlerClass.getCanonicalName()), e);
     }
